shop service created

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -23,4 +23,6 @@
         </ion-item>
       </ion-list>
   </div>
+
+  <ion-button expand="block" (click)="gotoShops()">Show shops</ion-button>
 </ion-content>
