--- a/frontend/src/app/shops/shops.page.html
+++ b/frontend/src/app/shops/shops.page.html
@@ -10,4 +10,11 @@
       <ion-title size="large">shops</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list>
+    <ion-item *ngFor="let s of shops">
+      <p>direccion: {{s.address}}</p>
+      <p>telefono: {{s.telephone}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
