--- a/frontend/src/app/shops/shops.page.html
+++ b/frontend/src/app/shops/shops.page.html
@@ -19,4 +19,6 @@
       </ion-item>
     </ion-list>
   </div>
+
+  <ion-button expand="block" (click)="gotoShopForm()">Create Shop</ion-button>
 </ion-content>
