--- a/frontend/src/app/shop-form/shop-form.page.html
+++ b/frontend/src/app/shop-form/shop-form.page.html
@@ -29,7 +29,7 @@
     </ion-note>
 
     <!-- Botón de Enviar -->
-     <ion-button expand="full" type="sumbit" [disabled]="!shopForm.valid">Crear</ion-button>
+     <ion-button expand="full" type="sumbit" [disabled]="!shopForm.valid">Create</ion-button>
 
   </form>
 </ion-content>
